# python-apt

./: AUTHORS  README  TODO  configure.in  setup.cfg  setup.py
apt/: README.apt  __init__.py  cache.py  cdrom.py  debfile.py  package.py  progress.py
aptsources/: __init__.py  distinfo.py  distro.py  sourceslist.py
data/templates/: Debian.info.in  Debian.mirrors  README.templates  Ubuntu.info.in  Ubuntu.mirrors
debian/: README.source  changelog  control  copyright  python-apt.docs  python-apt.install  rules
doc/: makefile
doc/examples/: acquire.py  action.py  all_deps.py  build-deps.py  cdrom.py  checkstate.py  config.py  configisc.py  deb_inspect.py  depcache.py  dependant-pkgs.py  desc.py  gui-inst.py  (+11 more)
po/: POTFILES.in  am.po  ar.po  be.po  bg.po  bn.po  br.po  ca.po  cs.po  csb.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ku.po  lt.po  lv.po  mk.po  mr.po  ms.po  (+33 more)
python/: acquire.cc  apt_instmodule.cc  apt_instmodule.h  apt_pkgmodule.cc  apt_pkgmodule.h  cache.cc  cdrom.cc  configuration.cc  depcache.cc  generic.cc  generic.h  indexfile.cc  makefile  metaindex.cc  pkgmanager.cc  pkgrecords.cc  pkgrecords.h  pkgsrcrecords.cc  progress.cc  progress.h  sourcelist.cc  string.cc  tag.cc  tar.cc
tests/: apt-test.py  cache.py  depcache.py  lock.py  memleak.py  pkgproblemresolver.py  pkgrecords.py  pkgsrcrecords.py  refcount.py  test_aptsources.py  test_aptsources_ports.py  test_debextract.py  test_extract_archive.py  test_hashsums.py
utils/: get_debian_mirrors.py  get_ubuntu_mirrors.py  get_ubuntu_mirrors_from_lp.py  mirrortest
(+3 files in other folders)
